--- a/index.html
+++ b/index.html
@@ -12,39 +12,45 @@
   <!-- Navbar -->
   <div id="navbar"></div>
 
+  <!-- Hero Section: Clean Start -->
   <header class="hero-section">
     <div class="hero-text">
       <h1>DeskThing</h1>
-      <p>Your minimalist dashboard. Simplicity meets functionality.</p>
+      <p>Simplify your workspace. Enhance your productivity. Elevate your day.</p>
       <a href="download.html" class="cta-btn">Get Started</a>
+    </div>
+    <div class="hero-image">
+      <img src="assets/images/product-image.jpg" alt="DeskThing App">
     </div>
   </header>
 
-  <!-- Features Section -->
+  <!-- Features Section with Smooth Scrolling -->
   <section class="features">
-    <h2>Features</h2>
-    <div class="feature-item">
-      <img src="assets/images/weather-icon.png" alt="Weather">
+    <h2>Essential Features for Modern Productivity</h2>
+    <div class="feature-item" data-aos="fade-up">
       <h3>Real-Time Weather</h3>
-      <p>Stay updated with live weather information.</p>
+      <p>Stay updated with live weather information, presented beautifully.</p>
     </div>
-    <div class="feature-item">
-      <img src="assets/images/clock-icon.png" alt="Clock">
+    <div class="feature-item" data-aos="fade-up" data-aos-delay="200">
       <h3>Live Clock</h3>
-      <p>Check time in a beautifully designed 12-hour format.</p>
+      <p>A 12-hour clock designed to fit seamlessly into your workflow.</p>
     </div>
-    <div class="feature-item">
-      <img src="assets/images/reminder-icon.png" alt="Reminders">
-      <h3>Reminders</h3>
-      <p>Manage your tasks and reminders with ease.</p>
+    <div class="feature-item" data-aos="fade-up" data-aos-delay="400">
+      <h3>Motivational Quotes</h3>
+      <p>Start your day with a new quote to inspire and motivate you.</p>
     </div>
   </section>
 
-  <!-- Pro Version -->
+  <!-- Pro Version Section -->
   <section class="pro-version">
     <h2>DeskThing Pro</h2>
-    <p>Unlock advanced features and customization with DeskThing Pro.</p>
-    <a href="pro.html" class="cta-btn">Upgrade to Pro</a>
+    <p>Unlock additional features that elevate your experience.</p>
+    <ul>
+      <li>Ad-free environment for focused work</li>
+      <li>Advanced customization for a personalized experience</li>
+      <li>Priority updates and support</li>
+    </ul>
+    <a href="pro.html" class="cta-btn">Unlock Pro</a>
   </section>
 
   <!-- Footer -->
