--- a/features.html
+++ b/features.html
@@ -12,25 +12,25 @@
   <!-- Navbar -->
   <div id="navbar"></div>
 
+  <!-- Features Detailed Page -->
   <section class="features-details">
-    <h2>DeskThing Features</h2>
-    <p>Explore the features that make DeskThing unique.</p>
+    <h2>Designed for Simplicity and Focus</h2>
 
-    <div class="feature-detail">
+    <div class="feature-detail" data-aos="fade-up">
       <h3>Real-Time Weather</h3>
-      <p>Live weather updates based on your location, featuring dynamic backgrounds and a subtle blur effect.</p>
+      <p>View live weather updates in a clean, easy-to-read format. The dynamic background adjusts based on the weather conditions to enhance your experience.</p>
     </div>
-    <div class="feature-detail">
+    <div class="feature-detail" data-aos="fade-up" data-aos-delay="200">
       <h3>Location Awareness</h3>
-      <p>Automatically fetch your location for precise weather data.</p>
+      <p>DeskThing automatically fetches your location for accurate weather updates.</p>
     </div>
-    <div class="feature-detail">
+    <div class="feature-detail" data-aos="fade-up" data-aos-delay="400">
       <h3>Live Clock</h3>
-      <p>A beautifully designed clock in a 12-hour format that is easy on the eyes.</p>
+      <p>Track the time in a beautifully minimalist 12-hour format, helping you stay on top of your day without distraction.</p>
     </div>
-    <div class="feature-detail">
+    <div class="feature-detail" data-aos="fade-up" data-aos-delay="600">
       <h3>Motivational Quotes</h3>
-      <p>Receive an inspirational quote every time you open the app.</p>
+      <p>Start every day with inspiration and positivity to fuel your productivity.</p>
     </div>
   </section>
 
