--- a/pro.html
+++ b/pro.html
@@ -13,16 +13,19 @@
   <div id="navbar"></div>
 
   <section class="pro-details">
-    <h2>DeskThing Pro</h2>
-    <p>Upgrade to the Pro version for enhanced features and a premium experience.</p>
+    <h2>Upgrade to DeskThing Pro</h2>
+    <p>Unlock exclusive features that streamline your productivity and provide a premium experience.</p>
 
-    <h3>Exclusive Features:</h3>
+    <h3>Pro Features:</h3>
     <ul>
-      <li>Ad-free experience</li>
-      <li>Advanced customization options</li>
-      <li>Priority updates and support</li>
+      <li>Ad-free experience for undisturbed focus</li>
+      <li>Advanced customization options to tailor your dashboard</li>
+      <li>Priority updates and dedicated support</li>
     </ul>
-    <a href="download.html" class="cta-btn">Upgrade Now for ₹199</a>
+
+    <h3>Price: ₹199 (One-Time)</h3>
+    <p>Take your productivity to the next level with DeskThing Pro. Start your journey now.</p>
+    <a href="download.html" class="cta-btn">Get Pro Now</a>
   </section>
 
   <!-- Footer -->
