--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DeskThing – A minimalist dashboard app for productivity and aesthetics">
+    <meta name="description" content="DeskThing – A minimalist dashboard app for productivity and aesthetics | Offical Site">
     <title>DeskThing – Minimalist Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
