--- a/pro.html
+++ b/pro.html
@@ -25,7 +25,7 @@
 
     <h3>Price: ₹199 (One-Time)</h3>
     <p>Take your productivity to the next level with DeskThing Pro. Start your journey now.</p>
-    <a href="download.html" class="cta-btn">Get Pro Now</a>
+    <a href="download.html" class="cta-btn">Coming Soon</a>
   </section>
 
   <!-- Footer -->
